Fix navigation links and tags on smaller screens

--- a/src/components/NavigationLinks/NavigationLinks.module.css
+++ b/src/components/NavigationLinks/NavigationLinks.module.css
@@ -24,6 +24,7 @@
     padding: 0.6rem 1.2rem;
     margin: 0px;
     border-radius: 3px;
+    display: inline-block;
 }
 
 .link, .link:hover, .link:visited, a:active {
